--- a/package.json
+++ b/package.json
@@ -15,68 +15,69 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.39",
-    "@iconify-json/simple-icons": "^1.2.33",
-    "@nuxt/icon": "^1.12.0",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/ui": "^3.3.0",
+    "@ai-sdk/openai": "^2.0.34",
+    "@ai-sdk/vue": "^2.0.51",
+    "@iconify-json/lucide": "^1.2.68",
+    "@iconify-json/simple-icons": "^1.2.53",
+    "@nuxt/icon": "^1.15.0",
+    "@nuxt/image": "^1.11.0",
+    "@nuxt/ui": "^3.3.5",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "^9.5.4",
-    "@tiptap/extension-details": "^2.18.0",
-    "@tiptap/extension-details-content": "^2.18.0",
-    "@tiptap/extension-details-summary": "^2.18.0",
-    "@tiptap/extension-emoji": "^2.18.0",
-    "@tiptap-pro/extension-export": "^2.18.0",
-    "@tiptap-pro/extension-import": "^2.18.0",
-    "@tiptap/core": "^2.11.9",
-    "@tiptap/extension-blockquote": "^2.11.9",
-    "@tiptap/extension-bold": "^2.11.9",
-    "@tiptap/extension-bubble-menu": "^2.11.9",
-    "@tiptap/extension-bullet-list": "^2.11.9",
-    "@tiptap/extension-character-count": "^2.11.9",
-    "@tiptap/extension-code": "^2.11.9",
-    "@tiptap/extension-code-block": "^2.11.9",
-    "@tiptap/extension-code-block-lowlight": "^2.11.9",
-    "@tiptap/extension-collaboration": "^2.11.9",
-    "@tiptap/extension-collaboration-cursor": "^2.11.9",
-    "@tiptap/extension-color": "^2.11.9",
-    "@tiptap/extension-document": "^2.11.9",
-    "@tiptap/extension-dropcursor": "^2.11.9",
-    "@tiptap/extension-focus": "^2.11.9",
-    "@tiptap/extension-font-family": "^2.11.9",
-    "@tiptap/extension-gapcursor": "^2.11.9",
-    "@tiptap/extension-hard-break": "^2.11.9",
-    "@tiptap/extension-heading": "^2.11.9",
-    "@tiptap/extension-highlight": "^2.11.9",
-    "@tiptap/extension-history": "^2.11.9",
-    "@tiptap/extension-horizontal-rule": "^2.11.9",
-    "@tiptap/extension-image": "^2.11.9",
-    "@tiptap/extension-italic": "^2.11.9",
-    "@tiptap/extension-link": "^2.11.9",
-    "@tiptap/extension-list-item": "^2.11.9",
-    "@tiptap/extension-ordered-list": "^2.11.9",
-    "@tiptap/extension-paragraph": "^2.11.9",
-    "@tiptap/extension-placeholder": "^2.11.9",
-    "@tiptap/extension-strike": "^2.11.9",
-    "@tiptap/extension-subscript": "^2.11.9",
-    "@tiptap/extension-superscript": "^2.11.9",
-    "@tiptap/extension-table": "^2.11.9",
-    "@tiptap/extension-table-cell": "^2.11.9",
-    "@tiptap/extension-table-header": "^2.11.9",
-    "@tiptap/extension-table-row": "^2.11.9",
-    "@tiptap/extension-task-item": "^2.11.9",
-    "@tiptap/extension-task-list": "^2.11.9",
-    "@tiptap/extension-text": "^2.11.9",
-    "@tiptap/extension-text-align": "^2.11.9",
-    "@tiptap/extension-text-style": "^2.11.9",
-    "@tiptap/extension-typography": "^2.11.9",
-    "@tiptap/extension-underline": "^2.11.9",
-    "@tiptap/extension-youtube": "^2.11.9",
-    "@tiptap/pm": "^2.11.9",
-    "@tiptap/suggestion": "^2.11.9",
-    "@tiptap/vue-3": "^2.11.9",
+    "@nuxtjs/i18n": "^9.5.6",
+    "@tiptap/core": "^2.26.2",
+    "@tiptap/extension-blockquote": "^3.5.2",
+    "@tiptap/extension-bold": "^3.5.2",
+    "@tiptap/extension-bubble-menu": "^3.5.2",
+    "@tiptap/extension-bullet-list": "^3.5.2",
+    "@tiptap/extension-character-count": "^3.5.2",
+    "@tiptap/extension-code": "^3.5.2",
+    "@tiptap/extension-code-block": "^3.5.2",
+    "@tiptap/extension-code-block-lowlight": "^3.5.2",
+    "@tiptap/extension-collaboration": "^3.5.2",
+    "@tiptap/extension-collaboration-cursor": "^2.26.2",
+    "@tiptap/extension-color": "^3.5.2",
+    "@tiptap/extension-details": "^3.5.2",
+    "@tiptap/extension-details-content": "^2.26.2",
+    "@tiptap/extension-details-summary": "^2.26.2",
+    "@tiptap/extension-document": "^3.5.2",
+    "@tiptap/extension-dropcursor": "^3.5.2",
+    "@tiptap/extension-emoji": "^3.5.2",
+    "@tiptap/extension-focus": "^3.5.2",
+    "@tiptap/extension-font-family": "^3.5.2",
+    "@tiptap/extension-gapcursor": "^3.5.2",
+    "@tiptap/extension-hard-break": "^3.5.2",
+    "@tiptap/extension-heading": "^3.5.2",
+    "@tiptap/extension-highlight": "^3.5.2",
+    "@tiptap/extension-history": "^3.5.2",
+    "@tiptap/extension-horizontal-rule": "^3.5.2",
+    "@tiptap/extension-image": "^3.5.2",
+    "@tiptap/extension-italic": "^3.5.2",
+    "@tiptap/extension-link": "^3.5.2",
+    "@tiptap/extension-list-item": "^3.5.2",
+    "@tiptap/extension-ordered-list": "^3.5.2",
+    "@tiptap/extension-paragraph": "^3.5.2",
+    "@tiptap/extension-placeholder": "^3.5.2",
+    "@tiptap/extension-strike": "^3.5.2",
+    "@tiptap/extension-subscript": "^3.5.2",
+    "@tiptap/extension-superscript": "^3.5.2",
+    "@tiptap/extension-table": "^3.5.2",
+    "@tiptap/extension-table-cell": "^3.5.2",
+    "@tiptap/extension-table-header": "^3.5.2",
+    "@tiptap/extension-table-row": "^3.5.2",
+    "@tiptap/extension-task-item": "^3.5.2",
+    "@tiptap/extension-task-list": "^3.5.2",
+    "@tiptap/extension-text": "^3.5.2",
+    "@tiptap/extension-text-align": "^3.5.2",
+    "@tiptap/extension-text-style": "^3.5.2",
+    "@tiptap/extension-typography": "^3.5.2",
+    "@tiptap/extension-underline": "^3.5.2",
+    "@tiptap/extension-youtube": "^3.5.2",
+    "@tiptap/pm": "^3.5.2",
+    "@tiptap/suggestion": "^3.5.2",
+    "@tiptap/vue-3": "^3.5.2",
     "@vueuse/core": "11.3.0",
-    "bumpp": "^10.1.0",
+    "ai": "^5.0.51",
+    "bumpp": "^10.2.3",
     "d3": "^7.9.0",
     "evaluatex": "^2.2.0",
     "highlight.js": "^11.11.1",
@@ -84,19 +85,19 @@
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.3",
     "lowlight": "^3.3.0",
-    "nuxt": "^4.0.1",
-    "openai": "^4.97.0",
-    "sass": "^1.87.0",
+    "nuxt": "^4.1.2",
+    "sass": "^1.93.2",
     "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "y-crossws": "^0.0.2",
-    "y-prosemirror": "^1.3.4",
+    "y-prosemirror": "^1.3.7",
     "y-websocket": "^2.1.0",
-    "yjs": "^13.6.26"
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@nuxt/eslint": "0.7.1",
-    "eslint": "^9.26.0",
-    "vue-tsc": "^2.2.10"
+    "eslint": "^9.36.0",
+    "openai": "^5.23.0",
+    "vue-tsc": "^2.2.12"
   }
 }
