refactor: rename package from @leazyhub/editor to @yggdraz/editor and update README with comprehensive features and usage instructions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@leazyhub/editor",
+  "name": "@yggdraz/editor",
   "type": "module",
   "version": "0.1.22",
   "main": "./nuxt.config.ts",
